Mon Nov  7 16:25:38 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* orbsvcs/examples/CosEC/RtEC_Based/tests/Multiple/CosEC_RtEC_Based_Mult.mpc
	* orbsvcs/tests/Notify/lib/Notify_lib.mpc
	* orbsvcs/tests/Security/Crash_Test/Security_Crash_Test.mpc
	* orbsvcs/tests/Security/MT_IIOP_SSL/MT_IIOP_SSL.mpc
	* orbsvcs/tests/Security/Secure_Invocation/Secure_Invocation.mpc
	* orbsvcs/tests/Trading/Trading.mpc
	* performance-tests/CSD_Strategy/TestInf/csd_pt_testinf.mpc

	Fixes for linking problems on OS X.
	
Mon Nov  7 12:07:44 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/PortableServer/POA_Current.h (POA_Current):

	  Re-exported this class.  Unfortunately, some TAO other libraries
	  make direct calls on this class.  Addresses unresolved symbol
	  errors.

	* tao/PortableServer/POA_Current.inl:

	  Removed this unused file.

Mon Nov  7 19:51:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/bounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/bounded_value_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_value_sequence_ut.cpp:
          Extended test_get_buffer_true_with_release_true test

Mon Nov  7 08:51:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/AMI_Primary_Replication_Strategy.cpp:
        * orbsvcs/orbsvcs/Trader/Trader_Interfaces.cpp:
        * orbsvcs/tests/Notify/lib/EventChannel_Command.cpp:
          Fixed warning in MinGW build

Mon Nov  7 08:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/RTCORBA/Thread_Pool.{h,inl}:
          Don't export TAO_Thread_Pool_Threads and removed
          threads accessor it exposes internal data
          and current_threads modifier which just is invalid todo

Mon Nov  7 00:54:58 MST 2005  Yan Dai  <dai_y@ociweb.com>

        * examples/CSD_Strategy/ThreadPool4/Foo_i.cpp: